build: migrate project from Gradle to Maven